SERVER-12926 identify command name explicity in profile text